Add a blog and post layouts. Add social media data file for footer use.

--- a/_includes/util/head.html
+++ b/_includes/util/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/reset.css" />
-  <link rel="stylesheet" href="/css/main.css" />
-  <title>{{ page.title }}</title>
+  <link rel="stylesheet" href="assets/css/reset.css" />
+  <link rel="stylesheet" href="assets/css/styles.scss" />
+  <title>{{ page.title }} | Andrey Syroyezhkin</title>
 </head>
