--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  {% include util/head.html %}
-  <body>
-    {% include header/main.html %} {{ content }} {% include footer/main.html %}
-  </body>
-</html>
+---
+layout: default
+---
+{{ content }}
