--- a/_includes/util/head.html
+++ b/_includes/util/head.html
@@ -1,7 +1,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/reset.css" />
-  <link rel="stylesheet" href="assets/css/styles.scss" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
   <title>{{ page.title }} | Andrey Syroyezhkin</title>
+  {% feed_meta %}
+  {% seo %}
 </head>
