Add sass directory and split css into resets, mobile, and desktop styles. Add more html pages for future development.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include util/head.html %}
-  <body>
-    {% include header/main.html %} {{ content }} {% include footer/main.html %}
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <title>{{ page.title }} | Andrey Syroyezhkin</title>
+  {% feed_meta %}
+  {% seo %}
+</head>
+
+<body>
+  {% include header/main.html %} {{ content }} {% include footer/main.html %}
+</body>
+
 </html>
